--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <div id="random-full-width-content" class="this-div-is-just-a-helpful-container">
         <div class="section section-services student-index">
           <div class="section-title">
-            <span>Flatiron School Class 003</span>
+            <span>Flatiron School Class 012819</span>
           </div>
         </div>
 
@@ -97,18 +97,18 @@
               <!-- Begin Student 1 -->
               <li class="home-blog-post">
                 <div class="blog-thumb">
-                  <a href="students/student_name.html">
-                    <img width="304" height="304" class="prof-image" src="img/students/student_name_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
+                  <a href="students/leigh_baugham.html">
+                    <img width="304" height="304" class="prof-image" src="img/students/leigh_baugham_index_profile.png" class="attachment-blog-thumb wp-post-image" alt="leigh_baugham">
                   </a>
                 </div>
 
                 <div class="blog-title">
                   <div class="big-comment">
                     <h3>
-                      <a href="students/student_name.html">Student Name</a>
+                      <a href="students/leigh_baugham.html">Leigh Baugham</a>
                     </h3>
                   </div>
-                  <p class="home-blog-post-meta">Tag Line</p>
+                  <p class="home-blog-post-meta">Student</p>
                 </div>
                 <div class="clear"></div>
 
