change excerpt on index.html

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 <div class="clear"></div>
 
                 <div class="excerpt">
-                  <p>Excerpt.</p>
+                  <p>Fullstack Web Development Program</p>
                 </div>
                 <div class="clear"></div>
               </li>
