--- a/index.html
+++ b/index.html
@@ -98,17 +98,17 @@
               <li class="home-blog-post">
                 <div class="blog-thumb">
                   <a href="students/student_name.html">
-                    <img width="304" height="304" class="prof-image" src="img/students/student_name_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
+                    <img width="304" height="304" class="prof-image" src="img/students//Users/spatel150/Desktop/Mod_one/deploy-on-day-1-atlanta-web-career-012819/img/students/mouni_mullapudi_background.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
                   </a>
                 </div>
 
                 <div class="blog-title">
                   <div class="big-comment">
                     <h3>
-                      <a href="students/student_name.html">Student Name</a>
+                      <a href="students/student_name.html">Mouni Mallapudi</a>
                     </h3>
                   </div>
-                  <p class="home-blog-post-meta">Tag Line</p>
+                  <p class="home-blog-post-meta">Science Bitch!</p>
                 </div>
                 <div class="clear"></div>
 
@@ -123,17 +123,17 @@
               <li class="home-blog-post">
                 <div class="blog-thumb">
                   <a href="students/student_name.html">
-                    <img width="304" height="304" class="prof-image" src="img/students/student_name_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
+                    <img width="304" height="304" class="prof-image" src="img/students//Users/spatel150/Desktop/Mod_one/deploy-on-day-1-atlanta-web-career-012819/img/students/mouni_mullapudi_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
                   </a>
                 </div>
 
                 <div class="blog-title">
                   <div class="big-comment">
                     <h3>
-                      <a href="students/student_name.html">Student Name</a>
+                      <a href="students/student_name.html"></a>
                     </h3>
                   </div>
-                  <p class="home-blog-post-meta">Tag Line</p>
+                  <p class="home-blog-post-meta">"Science Bitch</p>
                 </div>
                 <div class="clear"></div>
 
@@ -148,7 +148,7 @@
               <li class="home-blog-post">
                 <div class="blog-thumb">
                   <a href="students/student_name.html">
-                    <img width="304" height="304" class="prof-image" src="img/students/student_name_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
+                    <img width="304" height="304" class="prof-image" src="img/students/" class="attachment-blog-thumb wp-post-image" alt="student_name">
                   </a>
                 </div>
 
